--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2064,6 +2064,13 @@ body > div.content-container > div.container-layout > div.payroll__search--conta
 .upload__employee--img{
     margin-left: 32px;
 }
+.upload__employee--img i{
+    color: var(--red-color);
+    margin-right: 14px;
+}
+.upload__employee--img span{
+    color: var(--red-color) !important;
+}
 #employee-content > div:nth-child(1) > div.employee__content--container > div.employee__profile--img > div > button{
     padding: 10px 16px;
     border: 1px solid #F16532;
@@ -2937,13 +2944,13 @@ input::placeholder{
     display: block !important;
 }
 .recent__invitation:hover .invitation__recent--container{
-    display: block !important;
+    /*display: block !important;*/
 }
 .action__btn-application:hover .application__action--option{
     display: block !important;
 }
 #all-payroll > table > tbody > tr:nth-child(1) > td.d-flex > div > div{
-    left: -20px;
+    /*left: -20px;*/
 }
 #pending-payroll > table > tbody > tr:nth-child(1) > td.d-flex > div > div{
     left: -20px;
@@ -3121,4 +3128,13 @@ body > div.content-container > div > div.new__listing > div.listing__submit > di
     background: transparent;
     border: none;
     outline: none;
+}
+.job__list{
+    position: relative;
+}
+.job__action--btn .job__actions{
+    display: block !important;
+}
+.job__actions{
+    right: 0;
 }
