--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -322,7 +322,7 @@ header{
     justify-content: left;
     cursor: pointer;
     margin-top: 20px;
-    padding: 0 12px;
+    padding: 12px;
 }
 .dropdown__menu--item span a{
     font-family: 'Qanelas';
@@ -2130,6 +2130,7 @@ body > div.content-container > div.container-layout > div.payroll__search--conta
     font-size: 12px;
     line-height: 14px;
     color: #212121;
+    width: 12%;
 }
 #employee-content > div > div.employee__content--container > table > tbody > tr > td,
 #collapseOne > div > table > tbody > tr > td,
@@ -2212,7 +2213,19 @@ body > div.content-container > div.container-layout > div.payroll__search--conta
 .table>:not(caption)>*>*{
     padding: 0.5rem 0;
 }
+.dropzone__input--file{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    color: #ffffff;
+    font-size: 0px !important;
+    background: transparent;
+    border: none;
+    left: -16px;
+}
+
 .dropzone{
+    overflow: hidden;
     margin-top: 30px;
     padding: 14px 16px;
     width: 474px;
@@ -2239,6 +2252,13 @@ body > div.content-container > div.container-layout > div.payroll__search--conta
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.hr__document--dlt{
+    background: transparent;
+    border: none;
+    outline: none;
+    color: var(--red-color);
+    font-size: 20px;
 }
 #hr-document > div > div > div.modal-body.m-0.p-0 > div > div.attachment__container > div:nth-child(1) > i{
     color: var(--red-color);
@@ -2292,14 +2312,20 @@ body > div.content-container > div.container-layout > div.payroll__search--conta
 body > div.content-container > div > div.new__listing > div > div:nth-child(7) > input{
     margin-top: 16px;
 }
-.each__detail--input i{
+.each__detail--input button{
     position: absolute;
     right: -38px;
-    top: 32px;
+    top: 25px;
     font-size: 20px;
+    background: transparent;
+    border: none;
+    outline: none;
 }
 .add__question{
     margin-top: 16px;
+    background: transparent;
+    border: none;
+    outline: none;
 }
 .add__question i{
     font-size: 20px;
@@ -3129,12 +3155,46 @@ body > div.content-container > div > div.new__listing > div.listing__submit > di
     border: none;
     outline: none;
 }
-.job__list{
+.job__listings{
     position: relative;
+}
+.job__action--btn{
+    background: var(--red-color);
+}
+.job__action--btn svg path{
+    fill: #ffffff;
 }
 .job__action--btn .job__actions{
     display: block !important;
 }
 .job__actions{
     right: 0;
+}
+.fix__width tr td{
+    width: 12%;
+}
+.profile-dropdown{
+    background: white;
+    border-radius: 12px;
+    position: absolute;
+    top: 80px;
+    left: 280px;
+    padding: 10px;
+    border: 1px solid #F2F2F4;
+    box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.25);
+    width: 272px;
+}
+.profile-dropdown a{
+    text-decoration: none;
+    color: #000000;
+    font-size: 14px;
+    margin-left: 10px;
+}
+.profile-dropdown li{
+    padding: 10px;
+    border-bottom: 1px solid rgb(253 238 238);
+    list-style: none;
+}
+.drop-show{
+    display: none;
 }
