--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,15 +44,26 @@ header{
     background: transparent;
     width: 100%;
     text-align: left;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+    /*align-items: center;*/
+}
+.navbar__left--info{
+    display: inline-block;
+    margin-left: 14px;
+    margin-left: 14px;
+}
+.header__business--profile button svg {
+    margin-top: -15px;
 }
 .header__business--profile button::after{
     content: '\003E';
     border: 0 !important;
     transform: rotate(90deg);
     color: #F6ECE1;
+}
+#headerdropdown > div > ul{
+    width: 157px;
 }
 .header__business--profile ul{
     padding: 12px 14px;
@@ -82,9 +93,7 @@ header{
     font-size: 24px;
     color: var(--red-color);
 }
-.header__business--profile div{
-    margin-left: 10px;
-}
+
 .header__business--profile h2{
     font-weight: 400;
     font-size: 14px;
@@ -94,7 +103,7 @@ header{
 }
 .header__business--profile p{
     font-weight: 500;
-    font-size: 10px;
+    font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.03em;
     color: var(--red-color);
@@ -3277,10 +3286,10 @@ body > div.content-container > div > div.new__listing > div.listing__submit > di
     font-family: 'Qanelas';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 10px;
     line-height: 20px;
     color: #F16532;
-    margin-left: 14px;
+    /*margin-left: 14px;*/
 }
 
 .nav__profile--ul p{
