--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3307,7 +3307,8 @@ body > div.content-container > div > div.new__listing > div.listing__submit > di
 
 /*Toaster Button*/
 .toaster__container,
-.progress__bar--container{
+.progress__bar--container,
+.page__loader--container{
     background: #FFFFFF;
     border-radius: 12px;
     padding: 20px;
@@ -3354,3 +3355,94 @@ body > div.content-container > div > div.new__listing > div.listing__submit > di
     height: 100%;
     color: #ffffff;
 }
+.each__spinner{
+    position: relative;
+}
+/*Page Loader One*/
+.div{
+    width: 50px;
+    height: 50px;
+    /*position: absolute;*/
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid #e9218c;
+    border-radius: 50%;
+    border-left-color: transparent;
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-play-state: running;
+}
+
+.div::after{
+    content: '';
+    position: absolute;
+    width: 130%;
+    height: 131%;
+    border: 5px solid #2490fd;
+    border-radius: 50%;
+    border-right-color: transparent;
+    left: -13px;
+    top: -12px;
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-play-state: running;
+}
+
+
+.div::before{
+    content: '';
+    position: absolute;
+    width: 160%;
+    height: 160%;
+    border: 5px solid #fcb100;
+    border-radius: 50%;
+    border-left-color: transparent;
+    left: -20px;
+    top: -20px;
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-play-state: running;
+}
+
+.div:hover, .div::after, .div::before{
+    animation-play-state: paused;
+}
+
+
+@keyframes spin {
+    from{
+        transform: rotate(0deg);
+    }
+
+    to{
+        transform: rotate(360deg);
+    }
+}
+/*Page Loader One*/
+
+/*Page Loader Two*/
+.circle{
+    margin: 70px auto;
+    width: 400px;
+    height: 400px;
+    border: 10px solid rgba(255,255,255,0.2);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spinT 1s linear infinite;
+}
+@keyframes spinT{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+/*Page Loader Two*/
+
+/*Page Loader Three*/
+/*Page Loader Three*/
